ATLAS-1350: replace size with hasSize