@@ -1,7 +1,6 @@
 package ch.sbb.atlas.versioning.service;
 
 import static java.util.Comparator.comparing;
-import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import ch.sbb.atlas.versioning.BaseTest.VersionableObject.Relation;
@@ -46,9 +45,9 @@ public class VersionableServiceScenario3Test extends VersionableServiceBaseTest 
 
     //then
     assertThat(result).isNotNull();
-    assertThat(result.size()).isEqualTo(5);
+    assertThat(result).hasSize(5);
     List<VersionedObject> sortedVersionedObjects =
-        result.stream().sorted(comparing(VersionedObject::getValidFrom)).collect(toList());
+        result.stream().sorted(comparing(VersionedObject::getValidFrom)).toList();
 
     VersionedObject firstVersionedObject = sortedVersionedObjects.get(0);
     assertThat(firstVersionedObject.getAction()).isEqualTo(VersioningAction.NOT_TOUCHED);
@@ -64,7 +63,7 @@ public class VersionableServiceScenario3Test extends VersionableServiceBaseTest 
     assertThat(secondVersionedObject.getValidTo()).isEqualTo(editedValidFrom.minusDays(1));
     Entity secondVersionedObjectEntity = secondVersionedObject.getEntity();
     assertThat(secondVersionedObjectEntity).isNotNull();
-    assertThat(secondVersionedObjectEntity.getProperties().size()).isEqualTo(4);
+    assertThat(secondVersionedObjectEntity.getProperties()).hasSize(4);
     Property propertySecondVersionedObjectEntity = filterProperty(
         secondVersionedObjectEntity.getProperties(), VersionableObject.Fields.property);
     assertThat(propertySecondVersionedObjectEntity).isNotNull();
@@ -81,7 +80,7 @@ public class VersionableServiceScenario3Test extends VersionableServiceBaseTest 
     assertThat(thirdVersionedObject.getValidTo()).isEqualTo(versionableObject2.getValidTo());
     Entity thirdVersionedObjectEntity = thirdVersionedObject.getEntity();
     assertThat(thirdVersionedObjectEntity).isNotNull();
-    assertThat(thirdVersionedObjectEntity.getProperties().size()).isEqualTo(4);
+    assertThat(thirdVersionedObjectEntity.getProperties()).hasSize(4);
     Property propertyThirdVersionedObjectEntity = filterProperty(
         thirdVersionedObjectEntity.getProperties(), VersionableObject.Fields.property);
     assertThat(propertyThirdVersionedObjectEntity).isNotNull();
@@ -91,11 +90,11 @@ public class VersionableServiceScenario3Test extends VersionableServiceBaseTest 
     assertThat(oneToManyRelationThirdVersionedObjectEntity.hasOneToManyRelation()).isTrue();
     List<Entity> oneToManyRelationEntitiesThirdVersionedObjectEntity = oneToManyRelationThirdVersionedObjectEntity.getOneToMany();
     assertThat(oneToManyRelationEntitiesThirdVersionedObjectEntity).isNotEmpty();
-    assertThat(oneToManyRelationEntitiesThirdVersionedObjectEntity.size()).isEqualTo(1);
+    assertThat(oneToManyRelationEntitiesThirdVersionedObjectEntity).hasSize(1);
     Entity lineRelationThirdVersionedObject = oneToManyRelationEntitiesThirdVersionedObjectEntity.get(
         0);
     assertThat(lineRelationThirdVersionedObject.getProperties()).isNotEmpty();
-    assertThat(lineRelationThirdVersionedObject.getProperties().size()).isEqualTo(1);
+    assertThat(lineRelationThirdVersionedObject.getProperties()).hasSize(1);
     assertThat(lineRelationThirdVersionedObject.getProperties().get(0).getValue()).isEqualTo(
         "first Relation");
 
@@ -106,7 +105,7 @@ public class VersionableServiceScenario3Test extends VersionableServiceBaseTest 
     assertThat(fourthVersionedObject.getValidTo()).isEqualTo(editedValidTo);
     Entity fourthVersionedObjectEntity = fourthVersionedObject.getEntity();
     assertThat(fourthVersionedObjectEntity).isNotNull();
-    assertThat(fourthVersionedObjectEntity.getProperties().size()).isEqualTo(4);
+    assertThat(fourthVersionedObjectEntity.getProperties()).hasSize(4);
     Property propertyFourthVersionedObjectEntity = filterProperty(
         fourthVersionedObjectEntity.getProperties(), VersionableObject.Fields.property);
     assertThat(propertyFourthVersionedObjectEntity).isNotNull();
@@ -118,11 +117,11 @@ public class VersionableServiceScenario3Test extends VersionableServiceBaseTest 
     List<Entity> oneToManyRelationEntitiesFourthVersionedObjectEntity =
         oneToManyRelationFourthVersionedObjectEntity.getOneToMany();
     assertThat(oneToManyRelationEntitiesFourthVersionedObjectEntity).isNotEmpty();
-    assertThat(oneToManyRelationEntitiesFourthVersionedObjectEntity.size()).isEqualTo(1);
+    assertThat(oneToManyRelationEntitiesFourthVersionedObjectEntity).hasSize(1);
     Entity lineRelationFourthVersionedObject = oneToManyRelationEntitiesFourthVersionedObjectEntity.get(
         0);
     assertThat(lineRelationFourthVersionedObject.getProperties()).isNotEmpty();
-    assertThat(lineRelationFourthVersionedObject.getProperties().size()).isEqualTo(1);
+    assertThat(lineRelationFourthVersionedObject.getProperties()).hasSize(1);
     assertThat(lineRelationFourthVersionedObject.getProperties().get(0).getValue()).isEqualTo(
         "first Relation");
 
@@ -133,7 +132,7 @@ public class VersionableServiceScenario3Test extends VersionableServiceBaseTest 
     assertThat(fifthVersionedObject.getValidTo()).isEqualTo(versionableObject3.getValidTo());
     Entity fifthVersionedObjectEntity = fifthVersionedObject.getEntity();
     assertThat(fifthVersionedObjectEntity).isNotNull();
-    assertThat(fifthVersionedObjectEntity.getProperties().size()).isEqualTo(4);
+    assertThat(fifthVersionedObjectEntity.getProperties()).hasSize(4);
     Property propertyFifthVersionedObjectEntity = filterProperty(
         fifthVersionedObjectEntity.getProperties(), VersionableObject.Fields.property);
     assertThat(propertyFifthVersionedObjectEntity).isNotNull();
@@ -175,9 +174,9 @@ public class VersionableServiceScenario3Test extends VersionableServiceBaseTest 
 
     //then
     assertThat(result).isNotNull();
-    assertThat(result.size()).isEqualTo(5);
+    assertThat(result).hasSize(5);
     List<VersionedObject> sortedVersionedObjects =
-        result.stream().sorted(comparing(VersionedObject::getValidFrom)).collect(toList());
+        result.stream().sorted(comparing(VersionedObject::getValidFrom)).toList();
 
     VersionedObject firstVersionedObject = result.get(0);
     assertThat(firstVersionedObject.getAction()).isEqualTo(VersioningAction.NOT_TOUCHED);
@@ -189,7 +188,7 @@ public class VersionableServiceScenario3Test extends VersionableServiceBaseTest 
     assertThat(secondVersionedObject.getValidTo()).isEqualTo(editedValidFrom.minusDays(1));
     Entity secondVersionedObjectEntity = secondVersionedObject.getEntity();
     assertThat(secondVersionedObjectEntity).isNotNull();
-    assertThat(secondVersionedObjectEntity.getProperties().size()).isEqualTo(4);
+    assertThat(secondVersionedObjectEntity.getProperties()).hasSize(4);
     Property propertySecondVersionedObjectEntity = filterProperty(
         secondVersionedObjectEntity.getProperties(), VersionableObject.Fields.property);
     assertThat(propertySecondVersionedObjectEntity).isNotNull();
@@ -206,7 +205,7 @@ public class VersionableServiceScenario3Test extends VersionableServiceBaseTest 
     assertThat(thirdVersionedObject.getValidTo()).isEqualTo(versionableObject2.getValidTo());
     Entity thirdVersionedObjectEntity = thirdVersionedObject.getEntity();
     assertThat(thirdVersionedObjectEntity).isNotNull();
-    assertThat(thirdVersionedObjectEntity.getProperties().size()).isEqualTo(4);
+    assertThat(thirdVersionedObjectEntity.getProperties()).hasSize(4);
     Property propertyThirdVersionedObjectEntity = filterProperty(
         thirdVersionedObjectEntity.getProperties(), VersionableObject.Fields.property);
     assertThat(propertyThirdVersionedObjectEntity).isNotNull();
@@ -216,11 +215,11 @@ public class VersionableServiceScenario3Test extends VersionableServiceBaseTest 
     assertThat(oneToManyRelationThirdVersionedObjectEntity.hasOneToManyRelation()).isTrue();
     List<Entity> oneToManyRelationEntitiesThirdVersionedObjectEntity = oneToManyRelationThirdVersionedObjectEntity.getOneToMany();
     assertThat(oneToManyRelationEntitiesThirdVersionedObjectEntity).isNotEmpty();
-    assertThat(oneToManyRelationEntitiesThirdVersionedObjectEntity.size()).isEqualTo(1);
+    assertThat(oneToManyRelationEntitiesThirdVersionedObjectEntity).hasSize(1);
     Entity lineRelationThirdVersionedObject = oneToManyRelationEntitiesThirdVersionedObjectEntity.get(
         0);
     assertThat(lineRelationThirdVersionedObject.getProperties()).isNotEmpty();
-    assertThat(lineRelationThirdVersionedObject.getProperties().size()).isEqualTo(1);
+    assertThat(lineRelationThirdVersionedObject.getProperties()).hasSize(1);
     assertThat(lineRelationThirdVersionedObject.getProperties().get(0).getValue()).isEqualTo(
         "first Relation");
 
@@ -231,7 +230,7 @@ public class VersionableServiceScenario3Test extends VersionableServiceBaseTest 
     assertThat(fourthVersionedObject.getValidTo()).isEqualTo(editedValidTo);
     Entity fourthVersionedObjectEntity = secondVersionedObject.getEntity();
     assertThat(fourthVersionedObjectEntity).isNotNull();
-    assertThat(fourthVersionedObjectEntity.getProperties().size()).isEqualTo(4);
+    assertThat(fourthVersionedObjectEntity.getProperties()).hasSize(4);
     Property propertyFourthVersionedObjectEntity = filterProperty(
         fourthVersionedObjectEntity.getProperties(), VersionableObject.Fields.property);
     assertThat(propertyFourthVersionedObjectEntity).isNotNull();
@@ -248,7 +247,7 @@ public class VersionableServiceScenario3Test extends VersionableServiceBaseTest 
     assertThat(fifthVersionedObject.getValidTo()).isEqualTo(versionableObject3.getValidTo());
     Entity fifthVersionedObjectEntity = fifthVersionedObject.getEntity();
     assertThat(fifthVersionedObjectEntity).isNotNull();
-    assertThat(fifthVersionedObjectEntity.getProperties().size()).isEqualTo(4);
+    assertThat(fifthVersionedObjectEntity.getProperties()).hasSize(4);
     Property propertyFifthVersionedObjectEntity = filterProperty(
         fifthVersionedObjectEntity.getProperties(), VersionableObject.Fields.property);
     assertThat(propertyFifthVersionedObjectEntity).isNotNull();
